<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="10dp"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/ic_logowhite" />

    <TextView
        android:layout_width="131dp"
        android:layout_height="1dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/abril_fatface"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_small_title"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/nav_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_sans_bold"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

</LinearLayout>

