<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="@dimen/paddingSmall"
    tools:context=".fragments.HowToFragment">


    <TextView
        android:id="@+id/howToTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/howToTitle"
        android:textSize="27sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/stepOne"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/stepTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_sans"
        android:text="@string/steptwo"
        app:layout_constraintBottom_toTopOf="@+id/stepThree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/buttonExample"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonExample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.827" />

    <TextView
        android:id="@+id/stepOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_sans"
        android:text="@string/stepone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/stepThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_sans"
        android:text="@string/stepthree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <TextView
        android:id="@+id/stepFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_sans"
        android:text="@string/stepfour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <TextView
        android:id="@+id/althelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_sans"
        android:text="@string/althelp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="214dp"
        android:layout_height="57dp"
        android:layout_marginBottom="36dp"
        android:src="@drawable/newlogo"
        app:layout_constraintBottom_toTopOf="@+id/stepTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

</androidx.constraintlayout.widget.ConstraintLayout>